# HapticHID

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: DummyHapticHID.cpp  HapticHID.cpp  RotationHapticHID.cpp
